<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_class">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/YourClassesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    -->
                    <Button
                        android:id="@+id/ClassesBackButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/classchangertitle"
                        android:textAlignment="3"
                        android:textSize="30sp"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="italic"/>

                <!--</LinearLayout>-->
                <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:text="@string/defaultclass"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/editclassbutton"
                        />

                </LinearLayout>
                -->


            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/CreateClass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/createclassbutton"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>